--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "guzzlehttp/guzzle": "^6.3",
-        "slepic/http-transfer": "dev-master"
+        "slepic/http-transfer": "^0.1"
     },
     "autoload": {
         "psr-4": {
