--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Adapter of slepic/http-transfer ObserverInterface to guzzlehttp/guzzle middleware.",
     "type": "library",
     "require": {
-        "php": "^5.6 || ^7.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "php": ">=5.6",
+        "guzzlehttp/guzzle": "^6.3 || ^7.0",
         "slepic/http-transfer": "^0.1"
     },
     "autoload": {
