--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3 || ^7.0",
-        "slepic/http-transfer": "^0.1"
+        "slepic/http-transfer": "^0.1 || ^1.0"
     },
     "autoload": {
         "psr-4": {
